@@ -590,14 +590,6 @@ rb_hash_rehash_i(VALUE key, VALUE value, VALUE arg)
     return ST_CONTINUE;
 }
 
-static VALUE
-rehash_func(VALUE arg)
-{
-    struct rehash_arg *p = (struct rehash_arg *)arg;
-    rb_hash_foreach(p->hash, rb_hash_rehash_i, (VALUE)p->tbl);
-    return Qnil;
-}
-
 /*
  *  call-seq:
  *     hsh.rehash -> hsh
@@ -621,30 +613,23 @@ rehash_func(VALUE arg)
 static VALUE
 rb_hash_rehash(VALUE hash)
 {
-    int state;
-    struct rehash_arg arg;
-    st_table *new_tbl, *old_tbl = RHASH(hash)->ntbl;
+    VALUE tmp;
+    st_table *tbl;
 
     if (RHASH_ITER_LEV(hash) > 0) {
 	rb_raise(rb_eRuntimeError, "rehash during iteration");
     }
     rb_hash_modify_check(hash);
-    if (!old_tbl) return hash;
+    if (!RHASH(hash)->ntbl)
+        return hash;
+    tmp = rb_hash_new();
+    tbl = st_init_table_with_size(RHASH(hash)->ntbl->type, RHASH(hash)->ntbl->num_entries);
+    RHASH(tmp)->ntbl = tbl;
 
-    new_tbl = st_init_table_with_size(old_tbl->type, old_tbl->num_entries);
-    arg.hash = hash;
-    arg.tbl = new_tbl;
-
-    rb_protect(rehash_func, (VALUE)&arg, &state);
-
-    if (state) {
-	st_free_table(new_tbl);
-	rb_jump_tag(state);
-    }
-    else {
-	st_free_table(RHASH(hash)->ntbl);
-	RHASH(hash)->ntbl = new_tbl;
-    }
+    rb_hash_foreach(hash, rb_hash_rehash_i, (VALUE)tbl);
+    st_free_table(RHASH(hash)->ntbl);
+    RHASH(hash)->ntbl = tbl;
+    RHASH(tmp)->ntbl = 0;
 
     return hash;
 }
